프로젝트 업데이트 작업 - 7